yaml/www/04-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: shpaq-org
  name: shpaq-org
  namespace: apps
spec:
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    name: shpaq-org
