yaml/www/05-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shpaq-org
  namespace: apps
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.frontend.redirect.permanent: 'true'
    traefik.ingress.kubernetes.io/frontend-entry-points: http, https
    traefik.ingress.kubernetes.io/redirect-entry-point: https
  labels:
    app: shpaq-org
    app.kubernetes.io/instance: shpaq-org
    app.kubernetes.io/name: shpaq-org
spec:
  ingressClassName: traefik-lb
  rules:
  - host: shpaq.org
    http:
      paths:
      - backend:
          service:
            name: shpaq-org
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - secretName: shpaq-org-tls
    hosts:
      - shpaq.org
